# Load third party translation when stored in extension folder for admin menu (#18664)
# Load third party translation when stored in extension folder for CategoriesHelper (#18595)
# Correct of bug #18458 in JPagination class
# Correct the JControllerForm class: method_exists return true even for inherited method. Use of property_exists instead
$ Add the Content_Page_View_article in administrator/language/en-GB/en-GB.com_content.ini
$ Change the language string JOption_Access_Show_All_Sections to JOption_Access_Show_All_Levels

15-Jan-2010 Mark Dexter
^ Add language field to category, contact, article, module, newsfeed, weblink (Jean-Marie Simonet)
^ Fix sample data article (Elin Waring)

13-Jan-2010 Mark Dexter
^ More sample data changes (Elin Waring)

13-Jan-2010 Hannes Papenberg
# Fixed JFormFieldUsergroup - Thanks Christopher Demko!
^ Using PHPs built in SimpleXML instead of JSimpleXML to read XML files. Exception: JParameter. - Thanks Nikolai (elkuku)! 

12-Jan-2010 Mark Dexter
# Improvements to contact parameters (Elin Waring)
# Fixes in weblinks router (Elin Waring)
# Newsfeed parameters fixes (Andrea Tarr)
# Banners module parameter fixes (Andrea Tarr)
# Newsfeed layout fixes (Angie Radtke)
^ Working commit of new sample data (Elin Waring)
# Frontpage layout fixes (Angie Radtke)
# Bug fix in contact alias field
# Fix bug when there is no active menu during drill down

12-Jan-2010 Mark Dexter
# Fix bug creating new article category (Christophe Demko)

12-Jan-2010 Hannes Papenberg
^ changed JLanguage to use parse_ini_file() to handle translations - big performance improvement!
^ changed all language files to adhere to the standards required by parse_ini_file() - the files still need to be changed to the new language strings!
^ changed language strings in the code to adhere to the strings required by parse_ini_file()
# fixed XML file of mod_banners
+ Added missing JForm Fields present in JParameter - thank you Christopher Demko!