@@ -60,7 +60,7 @@ class CategoriesControllerCategory extends JController
 		$app->setUserState('com_categories.edit.category.type',	null);
 
 		// Check if we are adding for a particular extension
-		$extension = $app->getUserStateFromRequest($this->_context.'.filter.extension', 'extension', 'com_content');
+		$extension = $app->getUserStateFromRequest('com_categories.filter.extension', 'extension', 'com_content');
 
 		// Redirect to the edit screen.
 		$this->setRedirect(JRoute::_('index.php?option=com_categories&view=category&layout=edit&extension='.$extension, false));
@@ -102,7 +102,7 @@ class CategoriesControllerCategory extends JController
 		}
 
 		// Check if we are adding for a particular extension
-		$extension = $app->getUserStateFromRequest($this->_context.'.filter.extension', 'extension', 'com_content');
+		$extension = $app->getUserStateFromRequest('com_categories.filter.extension', 'extension', 'com_content');
 
 		// Push the new row id into the session.
 		$app->setUserState('com_categories.edit.category.id',	$id);
